--- a/usage.html
+++ b/usage.html
@@ -136,7 +136,7 @@
 
 <h2><a name="rss-feed-examples" class="anchor" href="#rss-feed-examples"><span class="octicon octicon-link"></span></a>RSS Feed Types</h2>
 
-<h3 class="blue" id="fav_rss"><span style="color:green !important"><i class="icon-file-text"></i></span> Favorites RSS Feed <code>favoritesrss.php</code></h3>
+<h3 class="blue" id="fav_rss"><span style="color:green !important"><i class="icon-rss-sign"></i></span> Favorites RSS Feed <code>favoritesrss.php</code></h3>
 <h5>Generic Favorites RSS Feed</h5>
 <pre><code>http://[yourdomain]/tweetledee/favoritesrss.php</code></pre>
 <h5>Optional URL Parameters</h5>
