--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 <ul>
     <li>Use one of the handy buttons on the right side of this page</li>
     <li>Decompress the files locally on your machine</li>
-    <li>This should result in a directory called 'tweetledee-master' that contains the goods which lie within the 'tweetledee' directory</li>
-    <li>The outer directory includes a FAQ, LICENSE, and README files.  They are worth a read, but they do not need to be included in the installation of Tweetledee on your server.</li>
+    <li>This will result in a .zip or .gz compressed directory that contains the delectable goods which reside within the 'tweetledee' directory inside</li>
+    <li>The outer decompressed directory includes a FAQ, LICENSE, and README files.  They are worth a read, but they do not need to be included in the installation of Tweetledee on your server.  The 'tweetledee' directory inside is the one that you want.</li>
 </ul>
 <h3><i class="icon-chevron-sign-right"></i> Step 3 : Obtain Your Twitter OAuth Settings</h3>
 <ul>
