--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <h3><i class="icon-chevron-sign-right"></i> Step 5 : Upload the Tweetledee files to your Server</h3>
 <ul>
   <li>Upload the tweetledee directory that you downloaded in Step 2 to your web server</li>
-  <li>You do not need to upload the outer directory (probably called tweetledee-master) or the top level files in the outer directory (LICENSE, FAQ, etc) that you decompressed</li>
+  <li>You do not need to upload the outer directory (probably called tweetledee-master or chrissimpkins-tweetledee-version) or the top level files in the outer directory (LICENSE, FAQ, etc) that you decompressed</li>
 </ul>
 <p>That's it. You are done.  The <a href="usage.html">usage section examples</a> assume that you uploaded the files to your top level public facing web server directory so that the tweetledee directory appears in your URL like this:</p>
 <h5>Example Tweetledee URL path</h5>
