--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
 <p>Tweetledee provides ready-bake PHP files that allow you to access Twitter user timelines, user favorites, home timelines, and tweet search data in a JSON or RSS format.  This approach works after the Twitter API 1.1 changes that eliminated Twitter support for RSS feeds.</p>
 <p>Grab your API tokens from Twitter, upload the Tweetledee files to your server, and use them.  It's that simple.</p>
+<p class="info-box"><i class="icon-beaker"></i> Update 7/3/2013 : User lists RSS and JSON files are nearly complete.  Release this week</p>
 
 <h2>
 <a name="requirements" class="anchor" href="#requirements"><span class="octicon octicon-link"></span></a>Requirements</h2>
-
 <p>You will need the following to use Tweetledee:</p>
 <ul>
   <li>Access to a web server with PHP version 5.1.2 or greater (PHP 5.4+ for pretty printed JSON)</li>
@@ -112,30 +112,36 @@
 <pre><code>http://[yourdomain]/tweetledee/userrss.php</code></pre>
 <p>Note that the default is 25 tweets in this feed.  You can modify this with URL parameters that you pass to the Tweetledee file (up to 200 tweets).  See the <a href="usage.html">usage section</a> for more information about the options that you have with each of the returned data types.</p>
 <h2><a name="file-types" class="anchor" href="#file-types"><span class="octicon octicon-link"></span></a>What Tweetledee Includes</h2>
-<h3><i class="icon-certificate"></i> Favorites (User) JSON</h3>
+<h3><i class="icon-sign-blank burntorange"></i> Favorites (User) JSON</h3>
 <pre><code>http://[yourdomain]/tweetledee/favoritesjson.php</code></pre>
-<h3><i class="icon-certificate"></i> Favorites (User) JSON (pretty printed)</h3>
+<h3><i class="icon-sign-blank burntorange"></i> Favorites (User) JSON (pretty printed)</h3>
 <pre><code>http://[yourdomain]/tweetledee/favoritesjson_pp.php</code></pre>
-<h3><i class="icon-certificate"></i> Favorites (User) RSS</h3>
+<h3><i class="icon-sign-blank burntorange"></i> Favorites (User) RSS</h3>
 <pre><code>http://[yourdomain]/tweetledee/favoritesrss.php</code></pre>
-<h3><i class="icon-certificate"></i> Home timeline JSON</h3>
+<h3><i class="icon-sign-blank burntorange"></i> Home timeline JSON</h3>
 <pre><code>http://[yourdomain]/tweetledee/homejson.php</code></pre>
-<h3><i class="icon-certificate"></i> Home timeline JSON (pretty printed)</h3>
+<h3><i class="icon-sign-blank burntorange"></i> Home timeline JSON (pretty printed)</h3>
 <pre><code>http://[yourdomain]/tweetledee/homejson_pp.php</code></pre>
-<h3><i class="icon-certificate"></i> Home timeline RSS feed</h3>
+<h3><i class="icon-sign-blank burntorange"></i> Home timeline RSS feed</h3>
 <pre><code>http://[yourdomain]/tweetledee/homerss.php</code></pre>
-<h3><i class="icon-certificate"></i> Tweet search JSON</h3>
+<h3><i class="icon-sign-blank burntorange"></i> Tweet search JSON</h3>
 <pre><code>http://[yourdomain]/tweetledee/searchjson.php</code></pre>
-<h3><i class="icon-certificate"></i> Tweet search JSON (pretty printed)</h3>
+<h3><i class="icon-sign-blank burntorange"></i> Tweet search JSON (pretty printed)</h3>
 <pre><code>http://[yourdomain]/tweetledee/searchjson_pp.php</code></pre>
-<h3><i class="icon-certificate"></i> Tweet search RSS feed</h3>
+<h3><i class="icon-sign-blank burntorange"></i> Tweet search RSS feed</h3>
 <pre><code>http://[yourdomain]/tweetledee/searchrss.php</code></pre>
-<h3><i class="icon-certificate"></i> User timeline JSON</h3>
+<h3><i class="icon-sign-blank burntorange"></i> User timeline JSON</h3>
 <pre><code>http://[yourdomain]/tweetledee/userjson.php</code></pre>
-<h3><i class="icon-certificate"></i> User timeline JSON (pretty printed)</h3>
+<h3><i class="icon-sign-blank burntorange"></i> User timeline JSON (pretty printed)</h3>
 <pre><code>http://[yourdomain]/tweetledee/userjson_pp.php</code></pre>
-<h3><i class="icon-certificate"></i> User timeline RSS feed</h3>
+<h3><i class="icon-sign-blank burntorange"></i> User timeline RSS feed</h3>
 <pre><code>http://[yourdomain]/tweetledee/userrss.php</code></pre>
+
+<h2>
+<a name="download-info" class="anchor" href="#download-info"><span class="octicon octicon-link"></span></a>Download Tweetledee</h2>
+<p>Please use one of the buttons on the right side of this screen.  You will receive a compressed directory that contains all of the Tweetledee files.</p>
+<p>Git users can clone the project with one of the following links: <a href="https://github.com/chrissimpkins/tweetledee.git">https://github.com/chrissimpkins/tweetledee.git</a> | <a href="git@github.com:chrissimpkins/tweetledee.git">git@github.com:chrissimpkins/tweetledee.git</a></p>
+<p>Subversion users can checkout the project with the following URL : <a href="">https://github.com/chrissimpkins/tweetledee</a></p>
 
 <h2>
 <a name="go-to-usage" class="anchor" href="#go-to-usage"><span class="octicon octicon-link"></span></a>Usage</h2>
