--- a/index.html
+++ b/index.html
@@ -140,8 +140,10 @@
 <h2>
 <a name="download-info" class="anchor" href="#download-info"><span class="octicon octicon-link"></span></a>Download Tweetledee</h2>
 <p>Please use one of the buttons on the right side of this screen.  You will receive a compressed directory that contains all of the Tweetledee files.</p>
-<p>Git users can clone the project with one of the following links: <a href="https://github.com/chrissimpkins/tweetledee.git">https://github.com/chrissimpkins/tweetledee.git</a> | <a href="git@github.com:chrissimpkins/tweetledee.git">git@github.com:chrissimpkins/tweetledee.git</a></p>
-<p>Subversion users can checkout the project with the following URL : <a href="">https://github.com/chrissimpkins/tweetledee</a></p>
+<p>Git users can clone the project with one of the following links:</p>
+<p><a href="https://github.com/chrissimpkins/tweetledee.git">https://github.com/chrissimpkins/tweetledee.git</a> | <a href="git@github.com:chrissimpkins/tweetledee.git">git@github.com:chrissimpkins/tweetledee.git</a></p>
+<p>Subversion users can checkout the project with the following URL : </p>
+<p><a href="">https://github.com/chrissimpkins/tweetledee</a></p>
 
 <h2>
 <a name="go-to-usage" class="anchor" href="#go-to-usage"><span class="octicon octicon-link"></span></a>Usage</h2>
