--- a/usage.html
+++ b/usage.html
@@ -33,7 +33,7 @@
       <div class="inner">
         <h1>Tweetledee</h1>
         <h2>A PHP library that provides an incredibly easy way to access Twitter data formatted as JSON or a RSS feed</h2>
-        <a href="https://github.com/chrissimpkins/tweetledee" class="button"><small>View project on</small>GitHub</a>
+        <a href="https://github.com/chrissimpkins/tweetledee" class="button" onClick="_gaq.push(['_trackEvent', 'Links', 'GitHub_Repo', 'GITHUB_REPO_LINK']);"><small>View project on</small>GitHub</a>
       </div>
     </header>
 
@@ -215,11 +215,11 @@
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/chrissimpkins/tweetledee/zipball/master" class="button">
+          <a href="https://github.com/chrissimpkins/tweetledee/zipball/master" class="button" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Zip_DL', 'ZIP_DL']);">
             <small>Download</small>
             .zip file
           </a>
-          <a href="https://github.com/chrissimpkins/tweetledee/tarball/master" class="button">
+          <a href="https://github.com/chrissimpkins/tweetledee/tarball/master" class="button" onClick="_gaq.push(['_trackEvent', 'Downloads', 'TarGz_DL', 'TARGZ_DL']);">
             <small>Download</small>
             .tar.gz file
           </a>
