updated notification about user lists release

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <p>Tweetledee provides ready-bake PHP files that allow you to access Twitter user timelines, user favorites, home timelines, and tweet search data in a JSON or RSS format.  This approach works after the Twitter API 1.1 changes that eliminated Twitter support for RSS feeds.</p>
 <p>Grab your API tokens from Twitter, upload the Tweetledee files to your server, and use them.  It's that simple.</p>
-<p class="info-box"><i class="icon-beaker"></i> Update 7/3/2013 : User lists RSS and JSON files are nearly complete.  Release this week</p>
+<p class="info-box"><i class="icon-beaker"></i> Update 7/4/2013 : User lists RSS and JSON files were released for testing. Docs coming.</p>
 
 <h2>
 <a name="requirements" class="anchor" href="#requirements"><span class="octicon octicon-link"></span></a>Requirements</h2>
