--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
             Support
           </a>
 
-          <p class="repo-owner"><a href="https://github.com/chrissimpkins/tweetledee"></a> Developed by <a href="https://github.com/chrissimpkins">Chris Simpkins</a>.</p>
+          <p class="repo-owner"><a href="https://github.com/chrissimpkins/tweetledee"></a> Developed by <a href="https://github.com/chrissimpkins">Chris Simpkins</a></p>
+          <p class="repo-owner sidebar-spacing middle-align"><span style="color:#00aced"><i class="icon-twitter icon-2x"></i></span> <a href="http://twitter.com/pixsied">@pixsied</a> | <a href="http://twitter.com/csimpkins">@csimpkins</a></p>
 
         </aside>
       </div>
