change link text

--- a/usage.html
+++ b/usage.html
@@ -47,7 +47,7 @@
 <ul>
   <li><a href="#fav_json">Favorites JSON</a></li>
   <li><a href="#home_json">Home timeline JSON</a></li>
-  <li><a href="#lists_json">Lists JSON</a></li>
+  <li><a href="#lists_json">List JSON</a></li>
   <li><a href="#search_json">Tweet search JSON</a></li>
   <li><a href="#user_json">User timeline JSON</a></li>
 </ul>
@@ -55,7 +55,7 @@
 <ul>
   <li><a href="#fav_rss">Favorites RSS feed</a></li>
   <li><a href="#home_rss">Home timeline RSS feed</a></li>
-  <li><a href="#lists_rss">Lists RSS feed</a></li>
+  <li><a href="#lists_rss">List RSS feed</a></li>
   <li><a href="#search_rss">Tweet search RSS feed</a></li>
   <li><a href="#user_rss">User timeline RSS feed</a></li>
 </ul>
