--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <meta name="google-site-verification" content="7XYepMSTUejZjRrgHrRzGSlKmIenbVQFR-aAxPyeqyc" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
+    <link rel="prerender" href="http://chrissimpkins.github.io/tweetledee/usage.html">
+    <link rel="prefetch" href="http://chrissimpkins.github.io/tweetledee/usage.html">
+    <link rel="prerender" href="http://chrissimpkins.github.io/tweetledee/support.html">
+    <link rel="prefetch" href="http://chrissimpkins.github.io/tweetledee/support.html">
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -34,7 +39,7 @@
       <div class="inner">
         <h1>Tweetledee</h1>
         <h2>A PHP library that provides an incredibly easy way to access Twitter data formatted as JSON or a RSS feed</h2>
-        <a href="https://github.com/chrissimpkins/tweetledee" class="button" onClick="_gaq.push(['_trackEvent', 'Links', 'GitHub_Repo', 'GITHUB_REPO_LINK']);"><small>View project on</small>GitHub</a>
+        <a href="https://github.com/chrissimpkins/tweetledee" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
 
@@ -157,11 +162,11 @@
         </section>
 
         <aside id="sidebar">
-          <a href="https://github.com/chrissimpkins/tweetledee/zipball/master" class="button" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Zip_DL', 'ZIP_DL']);">
+          <a href="https://github.com/chrissimpkins/tweetledee/zipball/master" class="button" id="dl-btn-zip">
             <small>Download</small>
             .zip file
           </a>
-          <a href="https://github.com/chrissimpkins/tweetledee/tarball/master" class="button" onClick="_gaq.push(['_trackEvent', 'Downloads', 'TarGz_DL', 'TARGZ_DL']);">
+          <a href="https://github.com/chrissimpkins/tweetledee/tarball/master" class="button" id="dl-btn-gz">
             <small>Download</small>
             .tar.gz file
           </a>
@@ -184,7 +189,7 @@
       <div class="inner">
       </div>
     </footer>
-
-
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
