--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 
 <p>Tweetledee provides ready-bake PHP files that allow you to access Twitter user timelines, user favorites, home timelines, and tweet search data in a JSON or RSS format.  This approach works after the Twitter API 1.1 changes that eliminated Twitter support for RSS feeds.</p>
 <p>Grab your API tokens from Twitter, upload the Tweetledee files to your server, and use them.  It's that simple.</p>
-<p class="info-box"><i class="icon-beaker"></i> Update 7/4/2013 : User lists RSS and JSON files were released. Usage docs updated.</p>
-<p class="info-box-btm"><i class="icon-beaker"></i> In the Pipeline : Pipe data to standard out stream | Client-side JS access to Tweetledee</p>
+<p class="info-box"><i class="icon-beaker"></i> Update 7/12/2013 : Command line/SSH access to Twitter data added. Docs update coming.</p>
+<p class="info-box-btm"><i class="icon-beaker"></i> In the Pipeline : Client-side JS access to Tweetledee | Caching for feeds</p>
 
 <h2>
 <a name="requirements" class="anchor" href="#requirements"><span class="octicon octicon-link"></span></a>Requirements</h2>
