updated FAQ with PHP version information

--- a/support.html
+++ b/support.html
@@ -49,6 +49,8 @@
 
           <h2><a name="faq" class="anchor" href="#faq"><span class="octicon octicon-link"></span></a>FAQ</h2>
           <h3><i class="icon-question icon-2x"></i> <span style="font-size:32px;">Install</span></h3>
+          <h4>What version of PHP do I need to use Tweetledee?</h4>
+          <p>Version 5.3 or above for the RSS feed and standard JSON files..  Version 5.4 or above for pretty printed JSON.</p>
           <h4>How do I get my Twitter OAuth tokens/keys?</h4>
           <p>You need to make a Twitter application</p>
           <h4>I don't make applications. Does that mean that I can't use Tweetledee?</h4>
