--- a/support.html
+++ b/support.html
@@ -42,7 +42,15 @@
         <section id="main-content">
           <h1>Tweetledee Help</h1>
           <h2><a name="bug-reporting" class="anchor" href="#bug-reporting"><span class="octicon octicon-link"></span></a>Bugs</h2>
-          <p>Find a bug?  Please <a href="https://github.com/chrissimpkins/tweetledee/issues/new">post it as a new issue</a> on GitHub.  Thanks for taking the time to report it.</p>
+          <p>Find a bug?  Please <a href="https://github.com/chrissimpkins/tweetledee/issues/new">post it as a new issue</a> on GitHub.</p>
+          <p>Please include the following in your bug report:</p>
+          <ul>
+            <li>PHP version that you are using</li>
+            <li>Tweetledee version that you are using (listed in the top of every file in comment)</li>
+            <li>Any error message(s) that you receive</li>
+            <li>A detailed description of when/how the error takes place</li>
+          </ul>
+          <p>Thanks for taking the time to report it!</p>
           <h2><a name="support" class="anchor" href="#support"><span class="octicon octicon-link"></span></a>Support</h2>
 
             <p>Having trouble?  Feel free to drop me a line on Twitter <a href="http://twitter.com/pixsied">@pixsied</a> and I'd be happy to help you sort it out.</p>
