--- a/support.html
+++ b/support.html
@@ -50,6 +50,11 @@
             <li>Any error message(s) that you receive</li>
             <li>A detailed description of when/how the error takes place</li>
           </ul>
+          <p>If you are comfortable making a change in the file to help with debugging, please switch the $TLD_DEBUG flag to 1 like this:</p>
+          <p><pre><code>$TLD_DEBUG = 0;</code></pre></p>
+          <p>to</p>
+          <p><pre><code>$TLD_DEBUG = 1;</code></pre></p>
+          <p>Then run the file again and record any error messages for your bug report.</p>
           <p>Thanks for taking the time to report it!</p>
           <h2><a name="support" class="anchor" href="#support"><span class="octicon octicon-link"></span></a>Support</h2>
 
