--- a/support.html
+++ b/support.html
@@ -46,7 +46,7 @@
           <p>Please include the following in your bug report:</p>
           <ul>
             <li>PHP version that you are using</li>
-            <li>Tweetledee version that you are using (listed in the top of every file in comment)</li>
+            <li>Tweetledee version that you are using (listed at the top of every file in comment)</li>
             <li>Any error message(s) that you receive</li>
             <li>A detailed description of when/how the error takes place</li>
           </ul>
