updated with new CC license and link to developer docs

--- a/support.html
+++ b/support.html
@@ -98,6 +98,10 @@
             <small>Return</small>
             Home
           </a>
+          <a href="developer.html" class="tld-btn">
+            <small>Extend It</small>
+            Developers
+          </a>
           <a href="usage.html" class="tld-btn">
             <small>Learn More</small>
             Usage
@@ -111,6 +115,9 @@
     </div>
     <footer>
       <div class="inner">
+      <div class="license">
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a><br />This documentation is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+      </div>
       </div>
     </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
