--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="prefetch" href="http://chrissimpkins.github.io/tweetledee/usage.html">
     <link rel="prerender" href="http://chrissimpkins.github.io/tweetledee/support.html">
     <link rel="prefetch" href="http://chrissimpkins.github.io/tweetledee/support.html">
+    <link rel="prerender" href="http://chrissimpkins.github.io/tweetledee/developer.html">
+    <link rel="prefetch" href="http://chrissimpkins.github.io/tweetledee/developer.html">
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -51,8 +53,7 @@
 
 <p>Tweetledee provides ready-bake PHP files that allow you to access Twitter user timelines, user favorites, lists, home timelines, and tweet search data in a JSON or RSS format.  This approach works after the Twitter API 1.1 changes that eliminated Twitter support for RSS feeds.</p>
 <p>Grab your API tokens from Twitter, upload the Tweetledee files to your server, and use them.  It's that simple.</p>
-<p class="info-box"><i class="icon-beaker"></i> Update 7/31/2013 : Support for cross site JS access to Twitter JSON added.</p>
-<p class="info-box-btm"><i class="icon-beaker"></i> In the Pipeline : Custom RSS formatting | Caching for feeds</p>
+<p class="info-box"><i class="icon-beaker"></i> Update 8/2/2013 : Developer docs released. Use the button to the right ></p>
 
 <h2>
 <a name="requirements" class="anchor" href="#requirements"><span class="octicon octicon-link"></span></a>Requirements</h2>
@@ -181,6 +182,10 @@
             <small>Learn More</small>
             Usage
           </a>
+          <a href="developer.html" class="tld-btn">
+            <small>Extend It</small>
+            Developers
+          </a>
           <a href="support.html" class="tld-btn">
             <small>Get Help</small>
             Support
@@ -194,6 +199,9 @@
     </div>
     <footer>
       <div class="inner">
+      <div class="license">
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a><br />This documentation is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+      </div>
       </div>
     </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
