updated doc homepage message

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <p>Tweetledee provides ready-bake PHP files that allow you to access Twitter user timelines, user favorites, lists, home timelines, and tweet search data in a JSON or RSS format.  This approach works after the Twitter API 1.1 changes that eliminated Twitter support for RSS feeds.</p>
 <p>Grab your API tokens from Twitter, upload the Tweetledee files to your server, and use them.  It's that simple.</p>
-<p class="info-box"><i class="icon-beaker"></i> Update 8/2/2013 : Developer docs released. Use the button to the right ></p>
+<p class="info-box"><i class="icon-bug"></i> Need to report a bug or error? Use the support button to the right for more information.</p>
 
 <h2>
 <a name="requirements" class="anchor" href="#requirements"><span class="octicon octicon-link"></span></a>Requirements</h2>
