--- a/usage.html
+++ b/usage.html
@@ -301,7 +301,7 @@
 
           <p class="repo-owner"><a href="https://github.com/chrissimpkins/tweetledee"></a> Developed by <a href="https://github.com/chrissimpkins">Chris Simpkins</a></p>
           <p class="repo-owner sidebar-spacing middle-align"><span style="color:#00aced"><i class="icon-twitter icon-2x"></i></span> <a href="http://twitter.com/pixsied">@pixsied</a> | <a href="http://twitter.com/csimpkins">@csimpkins</a></p>
-
+          <p class="repo-owner sidebar-spacing middle-align"><a href="https://flattr.com/submit/auto?user_id=pixsied&url=http://github.com/chrissimpkins/tweetledee&title=Tweetledee&description=Tweetledee&language=en_GB&tags=Twitter,RSS,JSON,feed,programming,developer&category=software"><img src="https://flattr.com/_img/icons/flattr_logo_16.png" alt="Flattr Tweetledee!" /> Flattr Tweetledee!</a></p>
         </aside>
       </div>
     </div>
