--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <p>Tweetledee provides ready-bake PHP files that allow you to access Twitter user timelines, user favorites, lists, home timelines, and tweet search data in a JSON or RSS format.  This approach works after the Twitter API 1.1 changes that eliminated Twitter support for RSS feeds.</p>
 <p>Grab your API tokens from Twitter, upload the Tweetledee files to your server, and use them.  It's that simple.</p>
-<p class="info-box"><i class="icon-code-fork"></i> Developers > Python and Ruby wrappers are now available.</p>
+<p class="info-box"><i class="icon-code-fork"></i> Developers > Python and Ruby wrappers are now available in the GitHub repository.</p>
 
 <h2>
 <a name="requirements" class="anchor" href="#requirements"><span class="octicon octicon-link"></span></a>Requirements</h2>
